--- a/src/app/pages/tenders/components/tenders-list/details/details.component.html
+++ b/src/app/pages/tenders/components/tenders-list/details/details.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="modal-body row">
                     <ng-container *ngFor="let request of reqData">
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" *ngIf="rowData[request] !== null">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" *ngIf="rowData[request] && request !== 'industries'">
                             <label class="main-label">{{ request }}</label>
                             <div class="info">{{ rowData[request] }}</div>
                         </div>
