--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -62,6 +62,7 @@
                         </div>
                     </div>
                 </td>
+                <td><i class="fas fa-sign-in-alt set set-cursor" (click)="selectedUserId = item.id; openModal(adminAccessUserAccountModal, item, 'archieve-modal')"></i></td>
             </tr>
         </tbody>
         <span *ngIf="userData?.length === 0">No Data Found!</span>
@@ -100,10 +101,10 @@
             <div *ngIf="request != 'id' && request != 'industries' && request !='avatar' && request != 'contacts' && request !== 'cover_img' && request != 'countries' && request != 'keywords' && rowData[request] && rowData[request] !==''" [ngClass]="(request == 'countries') ? 'col-xs-12 padding15': 'col-xs-12 col-sm-6 col-md-4 col-lg-3' + request">
                 <div class="info-detail-holder">
                     <label class="main-label">{{ request }}</label>
-                <div class="info">
-                    <span>{{ rowData[request] }} </span>
-                    <span *ngIf="request === 'industry' && rowData[request]">{{ rowData[request].name }} </span>
-                    <!-- <span *ngIf="request!=='profile_type'"><input [value]="rowData[request]"> </span>
+                    <div class="info">
+                        <span>{{ rowData[request] }} </span>
+                        <span *ngIf="request === 'industry' && rowData[request]">{{ rowData[request].name }} </span>
+                        <!-- <span *ngIf="request!=='profile_type'"><input [value]="rowData[request]"> </span>
                             <span *ngIf="request==='profile_type'">
                                     <ng-select [items]="profileType"
                                     bindLabel="name"
@@ -112,7 +113,7 @@
                          </ng-select>
                                 
                             </span> -->
-                </div>
+                    </div>
                 </div>
                 <div class="row info" *ngIf="request === 'country' && rowData[request]">
                     {{request}}
@@ -127,7 +128,7 @@
                             <span><label>Number:</label></span>
                             <span>{{rowData[request].number}}</span>
                         </div>
-                        
+
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
@@ -139,57 +140,57 @@
                         <div class="detailbxholer">
                             <span><label>alpha3code:
                             </label></span><span>{{rowData[request].alpha3code}}</span></div>
-                        </div>
-                        
+                    </div>
+
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>Name:
                             </label></span><span>{{rowData[request].name}}</span>
                         </div>
-                        
+
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>World Region:
                             </label></span><span>{{rowData[request].world_region}}</span>
                         </div>
-                        
+
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>World Region:
                             </label></span><span>{{rowData[request].world_region}}</span>
                         </div>
-                        
-                        </div>
+
+                    </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>World Subregion:
                             </label></span><span>{{rowData[request].world_subregion}}</span>
                         </div>
-                        
-                        </div>
+
+                    </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>Other Names:
                             </label></span><span>{{rowData[request].other_names}}</span>
                         </div>
-                        
-                        </div>
+
+                    </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>Currency ID:
                             </label></span><span>{{rowData[request].currency_id}}</span>
                         </div>
-                        
-                        </div>
+
+                    </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="detailbxholer">
                             <span><label>World region ID:
                             </label></span><span>{{rowData[request].world_region_id}}</span>
                         </div>
-                        
-                        </div>
+
+                    </div>
                 </div>
 
                 <div class="row info" *ngIf="request == 'contacts' && rowData[request].length>0">
@@ -395,5 +396,26 @@
                 <button class="btn-yes-margin33" (click)="archiveUserEvent()">Yes</button>
             </div>
         </div>
+    </form>
+</ng-template>
+
+<ng-template #adminAccessUserAccountModal>
+
+    <div class="modal-header">
+        <h4 class="modal-title">Confirm</h4>
+        <button type="button" class="close" (click)="approveModal.hide()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+    </div>
+    <div class="modal-body"><label>Are you sure you want to Access this User - {{ rowData.email }} ?</label></div>
+    <form novalidate>
+
+        <div class="row info">
+            <div class="col-xs-12 col-sm-12 text-left">
+                <button (click)="approveModal.hide()">No</button>
+                <button class="btn-yes-margin33" (click)="adminSession()">Yes</button>
+            </div>
+        </div>
+        <p class="note-set">NOTE: Any existing running session on <span>{{evn.frontEnd}}</span>, will be getting revoked by this operation.</p>
     </form>
 </ng-template>
