--- a/src/app/modules/components/chat-box/message-type/message-type.component.html
+++ b/src/app/modules/components/chat-box/message-type/message-type.component.html
@@ -1,3 +1,6 @@
-<p>
-    Here your message-type area!
-</p>
+<div class="message-section">
+    <form action="#">
+        <input type="text" placeholder="Text Message">
+        <button></button>
+    </form>
+</div>
