--- a/src/app/modules/components/chat-box/message/message.component.html
+++ b/src/app/modules/components/chat-box/message/message.component.html
@@ -1,5 +1,8 @@
-<div>
-    <p>
-        Here your message division!
-    </p>
+<div class="message-section">
+    <div class="message-item">
+        <div class="message-wrap">I've found some cool photos for our travel app.</div>
+    </div>
+    <div class="message-item message-item-right">
+        <div class="message-wrap right-box">I've found some cool photos for our travel app. I've found some cool photos for our travel app. I've found some cool photos for our travel app.</div>
+    </div>
 </div>
