--- a/src/app/modules/components/chat-box/chat-box.component.html
+++ b/src/app/modules/components/chat-box/chat-box.component.html
@@ -1,7 +1,7 @@
-<div>
-    <p>
-        Here your chat-box section...
-    </p>
+<div class="chat-section">
+    <p class="chat-date"> <strong>Today</strong> </p>
+    <div class="recieve-msg"></div>
+
     <div>
         <message></message>
     </div>
