--- a/src/app/modules/components/chat-box/message/message.component.html
+++ b/src/app/modules/components/chat-box/message/message.component.html
@@ -1,8 +1,34 @@
 <div class="message-section">
-    <div class="message-item">
-        <div class="message-wrap">I've found some cool photos for our travel app.</div>
-    </div>
-    <div class="message-item message-item-right">
-        <div class="message-wrap right-box">I've found some cool photos for our travel app. I've found some cool photos for our travel app. I've found some cool photos for our travel app.</div>
+    <div class="all-messages">
+        <p class="chat-date"> <strong>Today</strong> </p>
+        <!-- <p class="message-loading"> <strong>Loading...</strong> </p> -->
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+        </div>
+        
+        
+        
+
     </div>
 </div>
