--- a/src/app/modules/components/chat-box/chat-box.component.scss
+++ b/src/app/modules/components/chat-box/chat-box.component.scss
@@ -1,8 +1,1 @@
-.chat-section{
-position: relative;
-.chat-date{text-align: center; position: relative; font-size: 13px; color: #364253;
-strong{font-weight: 400; position: relative; z-index: 1; background: #e0e9f5; display: inline-block; padding: 2px 18px; border-radius: 6px;}
-}
-
-
-}
+.chat-section{position: relative;}
