--- a/src/app/modules/components/chat-box/message-type/message-type.component.html
+++ b/src/app/modules/components/chat-box/message-type/message-type.component.html
@@ -1,6 +1,6 @@
 <div class="message-section">
     <form action="#">
-        <input type="text" placeholder="Text Message">
-        <button></button>
+        <div class="message-txt"><textarea placeholder="Text Message"></textarea></div>
+        <button class="icon send"><i class="fas fa-paper-plane"></i></button>
     </form>
 </div>
