chat page design addition

--- a/src/app/modules/components/chat-box/message-type/message-type.component.html
+++ b/src/app/modules/components/chat-box/message-type/message-type.component.html
@@ -1,6 +1,14 @@
 <div class="message-section">
     <form action="#">
-        <div class="message-txt"><textarea placeholder="Text Message"></textarea></div>
-        <button class="icon send"><i class="fas fa-paper-plane"></i></button>
+        <div class="message-txt"><textarea placeholder="Text Message" rows="2"></textarea></div>
     </form>
+</div>
+<div class="all-buttons">
+    <ul>
+        <li></li>
+        <li> <label><i class="fas fa-paperclip"></i>
+            <input type="file" size="60" >
+            </label>  </li>
+        <li> <button class="send-btn"><i class="fas fa-paper-plane"></i></button> </li>
+    </ul>
 </div>
