--- a/src/app/modules/components/chat-box/message/message.component.html
+++ b/src/app/modules/components/chat-box/message/message.component.html
@@ -3,28 +3,63 @@
         <p class="chat-date"> <strong>Today</strong> </p>
         <!-- <p class="message-loading"> <strong>Loading...</strong> </p> -->
         <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
         </div>
         <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
         </div>
         <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.</div>
-        </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
-        </div>
-        <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.</div>
-        </div>
-        <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
         </div>
         <div class="message-item">
-            <div class="message-wrap">I've found some cool photos for our travel app.</div>
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
         </div>
         <div class="message-item message-item-right">
-            <div class="message-wrap right-box">I've found some cool photos for our travel app.</div>
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item">
+            <div class="message-wrap">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box">I've found some cool photos for our travel app.
+                <span class="msg-time">04:27 pm</span>
+            </div>
+        </div>
+        <div class="message-item message-item-right">
+            <div class="message-wrap right-box"><img src="assets/img/logo-symbol.png" width="100px" alt=""> <div class="download"><a href="#"><i class="fas fa-cloud-download-alt"></i></a></div> </div>
         </div>
         
         
