css design change

--- a/src/app/modules/components/chat-box/message/message.component.scss
+++ b/src/app/modules/components/chat-box/message/message.component.scss
@@ -5,12 +5,13 @@
         margin-bottom: 5px;
         .message-wrap {
             background: #fff;
-            padding: 15px 15px 24px 15px;
+            padding: 10px 10px 24px 10px;
             font-size: 14px;
             display: inline-block;
             position: relative;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-            border-radius: 15px;
+            border-radius: 10px; min-width: 70px;
+            max-width: 100%;
             i {
                 width: 50px;
                 text-align: center;
@@ -38,7 +39,7 @@
                 position: absolute;
                 font-size: 11px;
                 bottom: 4px;
-                right: 15px;
+                right: 10px;
                 color: #929292;
             }
         }
@@ -68,6 +69,24 @@
                 border-radius: 6px;
             }
         }
+        .chat-date:before {
+            content: '';
+            width: 47%;
+            height: 1px;
+            background: #efefef;
+            position: absolute;
+            left: 0;
+            top: 11px;
+        }
+        .chat-date:after {
+            content: '';
+            width: 47%;
+            height: 1px;
+            background: #efefef;
+            position: absolute;
+            right: 0;
+            top: 11px;
+        }
     }
     .all-messages {
         overflow-x: auto;
@@ -82,7 +101,7 @@
                 font-weight: 400;
                 position: relative;
                 z-index: 1;
-                background: rgba(25, 73, 181, 0.15);
+                background: #efefef;
                 display: inline-block;
                 padding: 2px 18px;
                 border-radius: 6px;
@@ -118,3 +137,21 @@
         }
     }
 }
+
+.chat-attach-file-mt{
+max-width: 340px;
+position: relative;
+ display: flex; align-items: center;
+.fl-icon{flex: 0 0 30px; text-align: center;
+i{font-size: 18px !important; width: unset !important;}
+}
+.fl-name{flex: 0 0 calc(100% - 55px);
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;}
+
+}
+
+
+
