--- a/src/app/modules/components/chat-box/message/message.component.html
+++ b/src/app/modules/components/chat-box/message/message.component.html
@@ -12,6 +12,11 @@
                     <img [src]="message.attachments[0]?.file?.url" width="100px" alt="">
                     <div class="download"><a [href]="message.attachments[0].file.url" target="_blank"><i class="fas fa-cloud-download-alt"></i></a></div>
                 </span>
+                <div *ngIf="!message.body && message.attachments.length>0" class="chat-attach-file-mt">
+                    <div class="download"><a [href]="message.attachments[0].file.url" target="_blank"><i class="fas fa-cloud-download-alt"></i></a></div>
+                    <span class="fl-icon"><i class="far fa-file-image ng-star-inserted" aria-hidden="true"></i></span>
+                    <span class="fl-name">test file name here test file name here</span>
+                </div>
             </div>
 
 
